<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentLeft="true">

    <TextView
        android:id="@+id/textacc"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:text="@string/visulization_o_live_accelerometer" />
    <com.jjoe64.graphview.GraphView
        android:id="@+id/AccGraphView"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/textacc"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AccGraphView"
        android:layout_centerInParent="true"
        android:text="@string/fft_view" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/FFTGraphView"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/textView"/>

    <SeekBar
        android:id="@+id/sampleSB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FFTGraphView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textSRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sampleSB"
        android:layout_centerInParent="true"
        android:text="@string/SampleInit"
        tools:ignore="UnknownId" />

    <SeekBar
        android:id="@+id/winSB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSRate"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/winSB"
        android:layout_centerInParent="true"
        android:text="@string/WindowInit" />


    <TextView
        android:id="@+id/idgesture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWin"
        android:layout_centerInParent="true"
        android:text="@string/current_gestures"/>

    <TextView
        android:id="@+id/idgesture1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idgesture"
        android:layout_centerInParent="true"
        android:text="@string/rotaion"/>
    <TextView
        android:id="@+id/idgesture2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idgesture1"
        android:layout_centerInParent="true"
        android:text="@string/flip"/>
    <TextView
        android:id="@+id/idgesture3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idgesture2"
        android:layout_centerInParent="true"
        android:text="@string/shake_speed"/>
    <TextView
        android:id="@+id/idgesture4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idgesture3"
        android:layout_centerInParent="true"
        android:text="@string/picked_the_device"
        tools:ignore="UnknownId" />


</RelativeLayout>